--- a/stylesheet/portfoloio.css
+++ b/stylesheet/portfoloio.css
@@ -1,7 +1,20 @@
 /*****General Styling******/
+html {
+    scroll-behavior: smooth; /*ensures that page scrolls smoothly*/
+}
 /*Body*/
 body {
-    margin: 0%; /*This ensures our site diplays all teh way to the edge of the browser screen*/
+    margin: 0%;
+    opacity: 1; /*This ensures our site diplays all teh way to the edge of the browser screen*/
+    transition: 3s opacity;
+    letter-spacing: .2vw;
+    font-family: Avant Garde, Helvetica;
+    font-size: 1.5vw;
+    overflow-x: hidden;
+    user-select: none;
+}
+body.fade-out {
+    opacity: .1;
 }
 
 /* heading 1 elements*/
@@ -21,15 +34,16 @@ h1:hover {
 /*Stylinng for portfolio title text*/
 .white-text {
     color: #fff;/*this is used to change the color of the portfoio title text*/
+    padding-top: 10vh;
 }
 /*paragraph elements*/
 P {
     font-family: Perpetua, Rockwell Extra Bold;
     text-align: justify;/*Justify text within paragraph elements*/
-    letter-spacing: 1px;/*This expands the text slightly*/
-    font-size: 20px;
-    padding-left: 20px;/* adds padding to the left of the paragraph element*/
-    padding-right: 20px;/*Adds padding to the right of the paragraph element*/
+    letter-spacing: .1vw;/*This expands the text slightly*/
+    font-size: 1.5vw;
+    padding-left: 1vw;/* adds padding to the left of the paragraph element*/
+    padding-right: 1vw;/*Adds padding to the right of the paragraph element*/
 }
 /*paragraph element hover effect*/
 p:hover {
@@ -49,6 +63,8 @@ p:hover {
 /*andchor elements*/
 a {
     color: blue; /*this ensures all links are blue*/
+    cursor: pointer;
+    text-decoration: underline;
 }
 /*quotation elements*/
 q {
@@ -59,16 +75,13 @@ img {
     filter: grayscale(75%);/*This rids our pictures of 75% of their color*/
     border-radius: 8px;/*Gives all images slightly rounded corners*/
     max-width: 100%;/* ensures all images stay within the width of their container*/
-    height: 340px; /*sets the height of all images*/
+    height: 100%; /*sets the height of all images*/
     display: block;/* by speciifying block display we can ensure our images are able to be centered*/
-    margin-left: auto;/* in combination with the "margin-right: auto" this centeres all images*/
-    margin-right: auto;
+    margin: auto auto auto auto;/* centers all margins*/
 }
 /*image element hover effects*/
 img:hover {
         filter: grayscale(5%);/* Brings back most of the image's coloer when hovered over*/
-    transition: transform 1s;/*transistion lasts 1 second*/
-        transform: scale(1.1);/*image is increased slightly when hovered over*/
 }
 /* the @media rule is used in media queries to apply different styles for different media/types of dvices
 on screens 576px and smaller the images will be 100px tall and centered vertically in the column*/ 
@@ -106,10 +119,10 @@ footer {
     float: left;/* this specifies teh the text floats on the left of the navbar*/
     display: block;/* ensures that other text will be diplay on the same line or row, intsead of a new line*/
     color: white;
-    padding: 14px 16px; /* this adds padding around our text*/
+    padding: .75vw 1vw; /* this adds padding around our text*/
     text-decoration: none; /*this gets rid of the underlinne under the text on our navbar*/
     font-family: Avant Garde, Helvetica;/*this specifies the font family for text on our Navbar*/
-    font-size: 20px;/*specifies teh font size for the text on the navbar*/
+    font-size: 1.5vw;/*specifies teh font size for the text on the navbar*/
     text-align: center;/*centeres the text with in its container*/
     position: relative;/*this sets the text relative to its normal positioning, allowing us to use the animation Below*/
     -webkit-animation: moveNavText 5.75s;/*Animation for safari 4.0-8,0*/
@@ -124,7 +137,7 @@ footer {
 /*Screens 576 px and smaller will display navbar llinks equall distributed*/
 @media screen and (max-width: 576px) {
     .Navbar a{
-        width: 25%;/*this makes each lijnk take up 1/4 of the navbar*/
+        width: 2%;/*this makes each link take up 1/5 of the navbar*/
         font-size: 12px;
     }
 }
@@ -133,10 +146,14 @@ footer {
     background-color: #f4f4f4;/* defines the background color that will display when you hover over the link*/
     color: black;
     font-weight: bold;
+    cursor: pointer;
 }
 /*Navbar home button*/
 .Navbar a.active {/* this targets the a element on the navbar with the "active" class*/
     background-color: darkgray;
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
 }
 /*----------------------------- END OF THE NAVBAR STYLING---------------------------*/
 /*----------------------------VIDEO STYLING-----------------------------------*/
@@ -161,7 +178,8 @@ footer {
     background: rgba (0, 0, 0, 0.5);
     color: white;
     width: 100%;
-    padding: 20px;
+    height: 100vh;
+    padding-top: 2vh;
     position: relative;
     -webkit-animation: moveVideoText 5.75s;
     animation: moveVideoText 5.75s;
@@ -174,6 +192,98 @@ footer {
 }
 /*  END OF VIDEO STYLING*/
 
+/*--------Slide Show Styling*/
+#Slideshow_Background {
+    background: rgba(255, 255, 255, 0.35);
+}
+
+mySlides{
+    display: none;
+}
+/*Slideshow section/Container*/
+#Slideshow_Container {
+    width: 39.5vw;
+    height: auto;
+    padding-top: 4%;
+    position: relative;
+    margin: auto;
+}
+.Slideshow_Images {
+    vertical-align: middle;
+    height: auto;
+    box-shadow: 0px 5px 10px 12px rgba (0, 0, 0, .75);
+    width: 100%;
+}
+
+.Previous, .Next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 2vw;
+    color: darkgray;
+    font-weight: bold;
+    font-size: 1.5vw;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    transition: 0.6s ease;
+}
+.Next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.Previous:hover, .Next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+}
+
+.text {
+    color: white;
+    padding: 1vw;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-family: Perpetua, Rockwell Extra Bold;
+    letter-spacing: 1.5vw;
+    background-color: rgba(0, 0, 0, 0.75);
+    font-weight: bold;
+    border-radius: 0px 0px 7px 7px;
+}
+
+.dot {
+    cursor: pointer;
+    height: 1vw;
+    width: 1vw;
+    margin: .25vw;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    z-index: 1;
+}
+
+.acitve, .dot:hover {
+    background-color: black;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4;}
+    to {opacity: 1;}
+}
+
+@keyframes fade {
+    from {opacity: .4;}
+    to {opacity: 1;}
+}
 /**** TABLE STYLING- thiss section covers teh stylinng of the columns and rows with in the table******/
 * {/*the asterisk is a univerrsal selector that applies this effect to all elements on the page*/
     box-sizing: border-box;/* this creates a box with a border within which we will place most of our text*/
@@ -181,9 +291,8 @@ footer {
 .Column_1 {
     float: left;
     width: 50%;
-    padding: 10%;
-    padding-top: 3%;
-    height: 400px;
+    padding: 1.6% ; 
+    height: 450px;
     background-color: #f2f2f2;
 }
 /* screens 576 and smaller will display a scroll bar if the text overflows the column height*/
@@ -195,16 +304,12 @@ footer {
 .Column_2 {
     float: left;
     width: 50%;
-    padding: 10px;
-    padding-top: 1.9%;
+    padding: 1.6%;
     height: 400px;
     background-color: #4d4d4d;
 }
 /* This class is applied to the columns in teh final row, overriding the height and padding to provide moe room for the contact form while keeping the rest of the formatting from Column_1 or Column_2*/
-.Column_tall {
-    padding-top: 3.5%;
-    height: 450px;
-}
+
 /* this inserts something after the content of selected elements (in thiss case the elements with class "row") */
 .Row:after {
     content: "";/*by leaving this balck, we are allowing the footer (covered lower down) to be displayed - removing it makes the footer overwrite a column*/
@@ -214,48 +319,90 @@ footer {
 /****** END OF THE TABLE STYLING****/
 /******CONTACT FORM STYLING*******/
 /*input [type=text] targets all text input sections of the contact form*/
-input[type=text] {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-    font-family: Perpetua, Rockwell Extra Bold;
-}
-/*hover effects for input boxes*/
-input[type=text]:hover {
-    box-shadow: 0 0 5px #00004d inset; /*this creates a blue shadow in teh text box when hovered over by the user*/
-}
-/*Submit button*/
-input[type=text] {
-    background-color: black;
-    color: white;
-    font-weight: bold;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: Perpetua, Rockwell Extra Bold;
-}
-/*Hover effect for submit button*/
-input[type=submit]:hover {
+..Pop_Up_Button {
+    position: fixed;
+    bottom: 1.75vw;
+    right: 1.75vw;
+    width: 25vw;
     background-color: white;
     color: black;
-    transform: scale(1.5);/*makes the button increase 1.5 times in size*/
-    transition: transform 1.5s;
+    cursor: pointer;
+    -webkit-animation: movePopup 5s;
+    animation: movePopup 5s;
 }
-/*form element*/
-form {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 10px;
+
+@keyframes movePopup {
+    from {right: -40vw;}
+    to {right: 1.75;}
+}
+
+@-webkit-keyframes movePopup {
+    from {right: -40vw;}
+    to {right: 1.75;}
+}
+
+.form-popup {
+    border: 3px solid #f0f1f0;
+    z-index: 8;
+    display: none;
+    position: fixed;
+    bottom: .5vw;
+    right: .5vw;
+}
+
+.form-container {
+    max-width: 49vw;
+    padding: 1vw;
+    background-color: white;
+}
+
+.form-container input[type=text] {
+    width: 100%;
+    padding: .93vw;
+    margin: .6vw 0 .6vw 0;
+    border: none;
+    background: gainsboro;
+    font-size: 1vw;
+}
+
+button {
     font-family: "Trebuchet MS", Optima;
+    letter-spacing: .3vw;
+    font-size: 1.5vw;
+    font-weight: bold;
+    padding: 1.5vw;
+    cursor: pointer;
+    width: 100%;
+    height: auto;
+}
+
+button:hover, .form-container .btn:hover {
+    color: white;
+    background-color: black;
+    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+    border-color: silver;
+}
+
+.form-container .btn {
+    background-color: white;
+    color: black;
+    border-color: black;
+    margin-bottom: 1vh;
+}
+
+.form-container .cancel {
+    background-color: black;
+    color: white;
+    border-color: gray;
+}
+
+.form-container .cancel:hover {
+    color: white;
+    background-color: darkred;
+    transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+    border-color: black;
 }
 
 /***** End of Contact Form Styling****/
